force-app/main/default/objects/iTalentDev__SLC_Translated_Case_Detail__c/fields/iTalentDev__Translated_Subject1__c.field-meta.xml
<CustomField>
    <fullName>iTalentDev__Translated_Subject1__c</fullName>
    <label>Translated Subject1</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>