force-app/main/default/objects/iTalentDev__SLC_Translated_Case_Detail__c/fields/iTalentDev__Translated_Subject__c.field-meta.xml
<CustomField>
    <fullName>iTalentDev__Translated_Subject__c</fullName>
    <label>Translated Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>