force-app/main/default/objects/iTalentDev__SLC_Translated_Case_Detail__c/fields/iTalentDev__Workflow__c.field-meta.xml
<CustomField>
    <fullName>iTalentDev__Workflow__c</fullName>
    <label>Workflow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>